--- a/.gitignore
+++ b/.gitignore
@@ -161,5 +161,10 @@ cython_debug/
 
 # Secrets for Google Workspace (Gmail, GCal)
 .secrets/
+
+#cache directory
 frontend/.next/
+
+#node_modules
 frontend/node_modules/
+backend/node_modules/
