--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,5 @@ frontend/.next/
 #node_modules
 frontend/node_modules/
 backend/node_modules/
+backend/package-lock.json
+backend/package-lock.json
