--- a/backend/package.json
+++ b/backend/package.json
@@ -3,21 +3,27 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "test": "node src/test/testPaymentAgent.js",
-    "test:payment": "node src/test/testPayment.js",
-    "process-invoice": "node src/test/processInvoice.js"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "tsc && node dist/index.js",
+    "test": "tsc && node dist/test/testPaymentAgent.js",
+    "test:payment": "tsc && node dist/test/testPayment.js",
+    "process-invoice": "tsc && node dist/test/processInvoice.js",
+    "process-batch": "tsc && node dist/test/processBatchPayments.js"
   },
   "dependencies": {
-    "@langchain/core": "^0.1.1",
-    "@langchain/openai": "^0.0.1",
+    "@langchain/community": "^0.0.19",
+    "@langchain/core": "^0.1.15",
+    "@langchain/openai": "^0.0.12",
     "axios": "^1.7.9",
     "dotenv": "^16.3.1",
-    "langchain": "^0.1.1",
+    "langchain": "^0.1.12",
     "paymanai": "^2.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "@types/node": "^20.11.5",
+    "nodemon": "^3.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
