--- a/.gitignore
+++ b/.gitignore
@@ -169,4 +169,6 @@ frontend/.next/
 frontend/node_modules/
 backend/node_modules/
 backend/package-lock.json
-backend/package-lock.json
+
+backend/reference/
+package-lock.json
