--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,4 @@ frontend/package-lock.json
 # invoice data
 backend/invoice data/email_attachments/
 backend/venv/
+backend/byrdeai-firebase-adminsdk-fbsvc-a168a9a31d.json
