--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,4 @@ frontend/package-lock.json
 # invoice data
 backend/invoice data/email_attachments/
 
+backend/src/payman-agent-render-firebase-adminsdk-fbsvc-76639f1307.json
