--- a/backend/src/requirements.txt
+++ b/backend/src/requirements.txt
@@ -1,11 +1,116 @@
-fastapi==0.109.0
-uvicorn==0.27.0
-python-dotenv==1.0.0
-firebase-admin==6.3.0
+aiohappyeyeballs==2.4.4
 aiohttp==3.9.1
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==3.7.1
+attrs==25.1.0
+bcrypt==4.2.1
+CacheControl==0.14.2
+cachetools==5.5.1
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+composio_core==0.6.19
+composio_langchain==0.6.19
+cryptography==44.0.0
+dataclasses-json==0.5.14
+distro==1.9.0
+fastapi==0.115.8
+firebase-admin==6.6.0
+frozenlist==1.5.0
+google-api-core==2.24.1
+google-api-python-client==2.160.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.1
+google-cloud-firestore==2.20.0
+google-cloud-storage==3.0.0
+google-crc32c==1.6.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.66.0
+greenlet==3.1.1
+grpcio==1.70.0
+grpcio-status==1.70.0
+h11==0.14.0
+httpcore==1.0.7
+httplib2==0.22.0
+httpx==0.28.1
+httpx-sse==0.4.0
+idna==3.10
+importlib_metadata==8.6.1
+inflection==0.5.1
+jiter==0.8.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonref==1.1.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+langchain==0.3.17
+langchain-community==0.3.16
+langchain-core==0.3.33
+langchain-openai==0.3.3
+langchain-text-splitters==0.3.5
+langchainhub==0.1.21
+langsmith==0.3.3
+markdown-it-py==3.0.0
+marshmallow==3.26.0
+mdurl==0.1.2
+msgpack==1.1.0
+multidict==6.1.0
+mypy-extensions==1.0.0
+numexpr==2.10.2
+numpy==1.26.4
+openai==1.60.2
+openapi-schema-pydantic==1.2.4
+orjson==3.10.15
+packaging==23.2
+paramiko==3.5.0
+paymanai==2.2.0
+propcache==0.2.1
+proto-plus==1.26.0
+protobuf==5.29.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+pydantic==2.10.6
+pydantic-settings==2.7.1
+pydantic_core==2.27.2
+Pygments==2.19.1
 PyJWT==2.8.0
+PyNaCl==1.5.0
+pyparsing==3.2.1
+pypdf==5.2.0
+PyPDF2==3.0.1
+pyperclip==1.9.0
+Pysher==1.0.8
+python-dotenv==1.0.0
 python-multipart==0.0.6
-openai==1.8.0
-langchain==0.1.0
-pydantic==2.5.3
-requests==2.31.0 
+PyYAML==6.0.2
+referencing==0.36.2
+regex==2024.11.6
+requests==2.31.0
+requests-toolbelt==1.0.0
+rich==13.9.4
+rpds-py==0.22.3
+rsa==4.9
+semver==3.0.4
+sentry-sdk==2.20.0
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.37
+starlette==0.45.3
+tenacity==8.5.0
+tiktoken==0.8.0
+tqdm==4.67.1
+types-requests==2.32.0.20241016
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+uritemplate==4.1.1
+urllib3==2.3.0
+uvicorn==0.27.0
+websocket-client==1.8.0
+yarl==1.18.3
+zipp==3.21.0
+zstandard==0.23.0
