--- a/backend/src/requirements.txt
+++ b/backend/src/requirements.txt
@@ -2,9 +2,12 @@ aiohappyeyeballs==2.4.4
 aiohttp==3.9.1
 aiosignal==1.3.2
 annotated-types==0.7.0
+anthropic==0.42.0
 anyio==3.7.1
+astroid==3.3.8
 attrs==25.1.0
 bcrypt==4.2.1
+black==24.10.0
 CacheControl==0.14.2
 cachetools==5.5.1
 certifi==2024.12.14
@@ -12,51 +15,78 @@ cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+composio-langchain==0.6.16
 composio_core==0.6.19
-composio_langchain==0.6.19
+contourpy==1.3.1
 cryptography==44.0.0
+cycler==0.12.1
 dataclasses-json==0.5.14
+dill==0.3.9
 distro==1.9.0
-fastapi==0.115.8
+docstring_parser==0.16
+ecdsa==0.19.0
+fastapi==0.115.7
+filelock==3.16.1
 firebase-admin==6.6.0
+fonttools==4.55.2
 frozenlist==1.5.0
+fsspec==2024.10.0
+google-ai-generativelanguage==0.6.10
 google-api-core==2.24.1
 google-api-python-client==2.160.0
 google-auth==2.38.0
 google-auth-httplib2==0.2.0
+google-cloud-aiplatform==1.74.0
+google-cloud-bigquery==3.27.0
 google-cloud-core==2.4.1
 google-cloud-firestore==2.20.0
+google-cloud-resource-manager==1.14.0
 google-cloud-storage==3.0.0
 google-crc32c==1.6.0
+google-generativeai==0.8.3
 google-resumable-media==2.7.2
 googleapis-common-protos==1.66.0
 greenlet==3.1.1
+grpc-google-iam-v1==0.13.1
 grpcio==1.70.0
 grpcio-status==1.70.0
 h11==0.14.0
 httpcore==1.0.7
 httplib2==0.22.0
+httptools==0.6.4
 httpx==0.28.1
 httpx-sse==0.4.0
+huggingface-hub==0.27.0
 idna==3.10
 importlib_metadata==8.6.1
 inflection==0.5.1
+iniconfig==2.0.0
+# Editable install with no version control (invoice-payment-agent==1.0.0)
+-e c:\users\coolm\onedrive - florida international university\projects\challenges\payman\backend
+isort==5.13.2
 jiter==0.8.2
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonref==1.1.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+kiwisolver==1.4.7
 langchain==0.3.17
 langchain-community==0.3.16
 langchain-core==0.3.33
 langchain-openai==0.3.3
 langchain-text-splitters==0.3.5
 langchainhub==0.1.21
+langgraph==0.0.15
+langgraph-checkpoint==2.0.8
+langgraph-sdk==0.1.43
 langsmith==0.3.3
 markdown-it-py==3.0.0
 marshmallow==3.26.0
+matplotlib==3.9.3
+mccabe==0.7.0
 mdurl==0.1.2
+mpmath==1.3.0
 msgpack==1.1.0
 multidict==6.1.0
 mypy-extensions==1.0.0
@@ -64,13 +94,21 @@ numexpr==2.10.2
 numpy==1.26.4
 openai==1.60.2
 openapi-schema-pydantic==1.2.4
+opencv-python==4.10.0.84
 orjson==3.10.15
 packaging==23.2
+pandas==2.2.3
 paramiko==3.5.0
+passlib==1.7.4
+pathspec==0.12.1
 paymanai==2.2.0
+pillow==11.1.0
+platformdirs==4.3.6
+pluggy==1.5.0
 propcache==0.2.1
 proto-plus==1.26.0
 protobuf==5.29.3
+psutil==6.1.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
@@ -79,14 +117,19 @@ pydantic-settings==2.7.1
 pydantic_core==2.27.2
 Pygments==2.19.1
 PyJWT==2.8.0
+pylint==3.3.3
 PyNaCl==1.5.0
 pyparsing==3.2.1
 pypdf==5.2.0
 PyPDF2==3.0.1
 pyperclip==1.9.0
 Pysher==1.0.8
+pytest==8.3.4
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
+python-jose==3.3.0
 python-multipart==0.0.6
+pytz==2024.2
 PyYAML==6.0.2
 referencing==0.36.2
 regex==2024.11.6
@@ -97,20 +140,27 @@ rpds-py==0.22.3
 rsa==4.9
 semver==3.0.4
 sentry-sdk==2.20.0
+shapely==2.0.6
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.37
 starlette==0.45.3
 tenacity==8.5.0
 tiktoken==0.8.0
+tomlkit==0.13.2
 tqdm==4.67.1
 types-requests==2.32.0.20241016
 typing-inspect==0.9.0
 typing_extensions==4.12.2
+tzdata==2025.1
 uritemplate==4.1.1
 urllib3==2.3.0
+uv==0.5.18
 uvicorn==0.27.0
+watchfiles==1.0.4
+wcwidth==0.2.13
 websocket-client==1.8.0
+websockets==14.2
 yarl==1.18.3
 zipp==3.21.0
 zstandard==0.23.0
