--- a/backend/src/requirements.txt
+++ b/backend/src/requirements.txt
@@ -2,7 +2,6 @@ aiohappyeyeballs==2.4.4
 aiohttp==3.9.1
 aiosignal==1.3.2
 annotated-types==0.7.0
-anthropic==0.42.0
 anyio==3.7.1
 astroid==3.3.8
 attrs==25.1.0
@@ -109,7 +108,7 @@ psutil==6.1.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
-pydantic==2.5.3
+pydantic>=2.6.4
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
 Pygments==2.19.1
@@ -161,3 +160,4 @@ websockets==14.2
 yarl==1.18.3
 zipp==3.21.0
 zstandard==0.23.0
+anthropic>=0.42.0
